facilitySetting css,js,html update

--- a/danusys-platform/src/main/resources/templates/fragments/default/default.html
+++ b/danusys-platform/src/main/resources/templates/fragments/default/default.html
@@ -54,6 +54,7 @@
     <!-- common js-->
     <script type="text/javascript" src="/js/common/common.js" ></script>
     <script type="text/javascript" src="/js/common/pageInit.js" ></script>
+    <script type="text/javascript" src="/js/common/jquery.timepicker.min.js" ></script>
 
     <!-- pages js-->
     <script type="text/javascript" src="/js/pages/notice.js"></script>
@@ -63,6 +64,7 @@
     <script type="text/javascript" src="/js/pages/account.js"></script>
     <script type="text/javascript" src="/js/pages/station.js"></script>
     <script type="text/javascript" src="/js/pages/facility.js"></script>
+    <script type="text/javascript" src="/js/pages/facilitySetting.js"></script>
     <script type="text/javascript" src="/js/pages/dimming.js"></script>
     <script type="text/javascript" src="/js/pages/faceDetection.js"></script>
     <script type="text/javascript" src="/js/pages/stats.js"></script>
