--- a/danusys-platform/src/main/resources/static/css/monitoring.css
+++ b/danusys-platform/src/main/resources/static/css/monitoring.css
@@ -172,12 +172,12 @@
 .popup_controls div.popup_writing fieldset ul li p{margin: 0px 20px 0px 0px; color: #7b8294;}
 .popup_controls div.popup_writing fieldset ul li span{}
 .popup_controls div.popup_writing fieldset ul li.tab_button{display: flex; align-items: center;}
-.popup_controls div.popup_writing fieldset ul li.add{display: flex; flex: initial; padding: 0px 20px; color: #7b8294; border-radius: 4px; background: #292c34; cursor: pointer;}
+.popup_controls div.popup_writing fieldset ul li.add{display: flex; flex: initial; padding: 0px 20px; color: #7b8294; border-radius: 4px; background: #292c34; cursor: pointer; height: 100%;}
 .popup_controls div.popup_writing fieldset ul li.add:active,
 .popup_controls div.popup_writing fieldset ul li.add:hover{color: #dee0e4; background: #4369e4;}
 .popup_controls div.popup_writing fieldset ul li.tab_button span{overflow: hidden; display: flex; align-items: center; height: 34px; padding: 0px 12px; color: #7b8294; border-left: 1px solid #1e1f23; background: #292c34; cursor: pointer;}
-/*.popup_controls div.popup_writing fieldset ul li.tab_button span.active,*/
-/*.popup_controls div.popup_writing fieldset ul li.tab_button span:active,*/
+.popup_controls div.popup_writing fieldset ul li.tab_button span.active,
+.popup_controls div.popup_writing fieldset ul li.tab_button span:active,
 .popup_controls div.popup_writing fieldset ul li.tab_button span:hover{color: #dee0e4; background: #4369e4;}
 .popup_controls div.popup_writing fieldset ul li.tab_button span:nth-child(2){border-top-left-radius: 4px; border-bottom-left-radius: 4px;}
 .popup_controls div.popup_writing fieldset ul li.tab_button span:nth-last-child(1){border-top-right-radius: 4px; border-bottom-right-radius: 4px;}
@@ -192,6 +192,33 @@
 .popup_controls div.popup_writing .controls_list table tr td{padding: 14px 10px; text-align: center;}
 .popup_controls div.popup_writing .controls_list table tr td span.button{height: 28px; color: #7b8294; border-radius: 4px; background: #292C34; cursor: pointer;}
 .popup_controls div.popup_writing .controls_list table tr td span.button:hover{color: #dee0e4;}
+.start_time:hover{cursor: pointer; background: #292C34;}
+
+
+.setting_area p.sub_title{display: flex; align-items: center; height: 24px; margin: 0px 0px 10px 0px; font-weight: bold;}
+.setting_area ul{display: flex; grid-gap: 20px; flex-wrap: wrap; white-space: nowrap; margin: 0px 0px 20px 0px;}
+.setting_area ul li{flex: 1; display: flex; align-items: center;}
+.setting_area ul.setting_type1{display: flex; flex-wrap: inherit;}
+.setting_area ul.setting_type1 li{flex: 1;}
+.setting_area ul.setting_type3{display: flex; justify-content: space-between;}
+.setting_area ul.setting_type3 li{flex: initial;}
+.setting_area ul li.date{grid-gap: 10px;}
+.setting_area ul li p{margin: 0px 20px 0px 0px; color: #7b8294;}
+.setting_area ul li span{}
+.setting_area ul li.tab_button{display: flex; align-items: center;}
+.setting_area ul li.add{display: flex; flex: initial; padding: 0px 20px; color: #7b8294; border-radius: 4px; background: #292c34; cursor: pointer; height: 100%;}
+.setting_area ul li.add:active,
+.setting_area ul li.add:hover{color: #dee0e4; background: #4369e4;}
+.setting_area ul li.tab_button span{overflow: hidden; display: flex; align-items: center; height: 34px; padding: 0px 12px; color: #7b8294; border-left: 1px solid #1e1f23; background: #292c34; cursor: pointer;}
+.setting_area ul li.tab_button span.active,
+.setting_area ul li.tab_button span:active,
+.setting_area ul li.tab_button span:hover{color: #dee0e4; background: #4369e4;}
+.setting_area ul li.tab_button span:nth-child(2){border-top-left-radius: 4px; border-bottom-left-radius: 4px;}
+.setting_area ul li.tab_button span:nth-last-child(1){border-top-right-radius: 4px; border-bottom-right-radius: 4px;}
+.setting_area ul li.tab_button p.number{display: flex; align-items: center;}
+.setting_area ul li.tab_button p.number input{width: 80px; margin: 0px 8px 0px 0px;}
+.setting_area ul li.tab_button p.number span{width: auto; margin: 0px 1px; padding: 0px; text-align: center; background: none;}
+.setting_area ul li.tab_button span.unit{width: 20px; margin: 0px; padding: 0px 14px; background: none;}
 /* //220708 예약시간 설정 */
 
 .popup .bottom {display: flex; align-items: center; justify-content: center; grid-gap: 8px; padding: 14px 10px; border-top: 1px solid #292c34;}
