사용자 계정 페이지 추가

--- a/danusys-firefighting/src/main/resources/templates/fragments/default/default.html
+++ b/danusys-firefighting/src/main/resources/templates/fragments/default/default.html
@@ -2,7 +2,7 @@
 <th:block th:fragment="head">
     <meta charset="utf-8">
 <!--    <link rel="shortcut icon" th:href="${@environment.getProperty('municipality.favicon')}"/>-->
-    <title>Iot 플랫폼</title>
+    <title>소방 재난 관제 시스템</title>
     <meta name="ctx" th:content="${#httpServletRequest.getContextPath()}" />
     <meta http-equiv="Cache-Control" content="no-cache" />
     <meta http-equiv="Pragma" content="no-cache" />
