--- a/danusys-firefighting/src/main/resources/templates/layout/layout_login.html
+++ b/danusys-firefighting/src/main/resources/templates/layout/layout_login.html
@@ -16,7 +16,7 @@
     <script type="text/javascript" src="/js/common/common.js" ></script>
 
     <link rel="shortcut icon" th:href="${@environment.getProperty('municipality.favicon')}"/>
-    <title>Iot 플랫폼</title>
+    <title>소방 재난 관제 시스템</title>
 </head>
 
 <body>
