스마트폴 오른쪽 패널

--- a/danusys-platform/src/main/resources/templates/fragments/mntr/navR.html
+++ b/danusys-platform/src/main/resources/templates/fragments/mntr/navR.html
@@ -243,6 +243,7 @@
             <ul class="tab">
                 <li class="active" data-value="info"><a>기본 정보</a></li>
                 <li data-value="control"><a>시설물 제어</a></li>
+                <li data-value="fcltState"><a>시설물 현황</a></li>
             </ul>
             <div class="area_right_scroll select" data-value="info">
                 <dl class="area_title" data-group="stationInfo">
@@ -423,6 +424,30 @@
 <!--                </div>-->
             </div>
         </div>
+            <div class="area_right_scroll" data-value="fcltState">
+                <dl class="area_title" data-group="cctvList">
+                    <dt><i><img src="/images/default/titleIcon06.svg"></i>CCTV 리스트</dt>
+                </dl>
+                <div class="area_right_text" data-group="cctvList">
+                    <ul>
+                        <!--<li>
+                            <span>CCTV1</span>
+                            <input data-value="address" type="text" disabled>
+                        </li>-->
+                    </ul>
+                </div>
+                <dl class="area_title" data-group="fcltList">
+                    <dt><i><img src="/images/default/titleIcon06.svg"></i>시설물 리스트</dt>
+                </dl>
+                <div class="area_right_text" data-group="fcltList">
+                    <ul>
+                        <li>
+                            <span>FCLT1</span>
+                            <input data-value="address" type="text" disabled>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </section>
 
