--- a/danusys-platform/src/main/resources/static/css/monitoring.css
+++ b/danusys-platform/src/main/resources/static/css/monitoring.css
@@ -367,9 +367,9 @@
 .occur_process .button{grid-gap: 8px; margin: 10px auto 0px;}
 
 /* area_right_scroll */
-.area_right_scroll{flex: 1; display: flex; flex-direction: column; overflow: auto;}
+.area_right_scroll{/*flex: 1;*/ display: flex; flex-direction: column; overflow: auto;}
 .area_right_scroll:not(.select){display:none;}
-.area_right_scroll div{flex: 1;}
+.area_right_scroll div{/*flex: 1;*/}
 /* area_right_text */
 .area_right_text{flex: 1; background: #1e1f23;}
 .area_right_text ul{margin: 20px;}
