--- a/danusys-firefighting/src/main/resources/static/css/board.css
+++ b/danusys-firefighting/src/main/resources/static/css/board.css
@@ -119,7 +119,7 @@ input {
 
 input.input_search {
   padding: 0 2.625rem 0 0.75rem;
-  background: url(../images/icon_search.svg) right 12px center no-repeat transparent;
+  background: url(../images/default/icon_search.svg) right 12px center no-repeat transparent;
   background-size: 1.25rem 1.25rem;
 }
 
@@ -152,7 +152,7 @@ select {
   border: 0.0625rem solid #2c2c2c;
   border-radius: 0.25rem;
   font-family: "Noto Sans KR", sans-serif;
-  background: url("../images/arrow_open.svg") right 1rem center no-repeat transparent;
+  background: url("../images/default/arrow_open.svg") right 1rem center no-repeat transparent;
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
@@ -285,13 +285,13 @@ input[type=checkbox] + label span {
   max-height: 1.25rem;
   margin: 0 0 0 0 !important;
   vertical-align: middle;
-  background: url("../images/checkbox_defalt.svg") center center no-repeat;
+  background: url("../images/default/checkbox_defalt.svg") center center no-repeat;
   background-size: 100% 100%;
   cursor: pointer;
 }
 
 input[type=checkbox]:checked + label span {
-  background: url("../images/checkbox_active.svg") center center no-repeat;
+  background: url("../images/default/checkbox_active.svg") center center no-repeat;
   background-size: 100% 100%;
 }
 
@@ -321,13 +321,13 @@ input[type=radio] + label span {
   margin: 0.125rem 0 0 0;
   font-size: 0;
   vertical-align: middle;
-  background: url("../images/radio_default.svg") no-repeat;
+  background: url("../images/default/radio_default.svg") no-repeat;
   background-size: 100% 100%;
   cursor: pointer;
 }
 
 input[type=radio]:checked + label span {
-  background: url("../images/radio_active.svg") no-repeat;
+  background: url("../images/default/radio_active.svg") no-repeat;
   background-size: 100% 100%;
 }
 
@@ -618,6 +618,10 @@ i.circle.red{background: #cd4841;} */
 .accordion li > .accordion_sub_menu {
   height: 0;
   overflow: hidden;
+  -webkit-transition: height 0.2s ease-in-out;
+  -moz-transition: height 0.2s ease-in-out;
+  -o-transition: height 0.2s ease-in-out;
+  -ms-transition: height 0.2s ease-in-out;
   transition: height 0.2s ease-in-out;
 }
 
@@ -2468,4 +2472,6 @@ i.circle.red{background: #cd4841;} */
 
 .popup.signage_popup div fieldset dl:nth-child(2) > dd input {
   width: 80px;
-}/*# sourceMappingURL=board.css.map */
+}
+
+/*# sourceMappingURL=board.css.map */
