--- a/danusys-firefighting/src/main/resources/static/css/reset.css
+++ b/danusys-firefighting/src/main/resources/static/css/reset.css
@@ -119,7 +119,7 @@ input {
 
 input.input_search {
   padding: 0 2.625rem 0 0.75rem;
-  background: url(../images/icon_search.svg) right 12px center no-repeat transparent;
+  background: url(../images/default/icon_search.svg) right 12px center no-repeat transparent;
   background-size: 1.25rem 1.25rem;
 }
 
@@ -152,7 +152,7 @@ select {
   border: 0.0625rem solid #2c2c2c;
   border-radius: 0.25rem;
   font-family: "Noto Sans KR", sans-serif;
-  background: url("../images/arrow_open.svg") right 1rem center no-repeat transparent;
+  background: url("../images/default/arrow_open.svg") right 1rem center no-repeat transparent;
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
@@ -285,13 +285,13 @@ input[type=checkbox] + label span {
   max-height: 1.25rem;
   margin: 0 0 0 0 !important;
   vertical-align: middle;
-  background: url("../images/checkbox_defalt.svg") center center no-repeat;
+  background: url("../images/default/checkbox_defalt.svg") center center no-repeat;
   background-size: 100% 100%;
   cursor: pointer;
 }
 
 input[type=checkbox]:checked + label span {
-  background: url("../images/checkbox_active.svg") center center no-repeat;
+  background: url("../images/default/checkbox_active.svg") center center no-repeat;
   background-size: 100% 100%;
 }
 
@@ -321,13 +321,13 @@ input[type=radio] + label span {
   margin: 0.125rem 0 0 0;
   font-size: 0;
   vertical-align: middle;
-  background: url("../images/radio_default.svg") no-repeat;
+  background: url("../images/default/radio_default.svg") no-repeat;
   background-size: 100% 100%;
   cursor: pointer;
 }
 
 input[type=radio]:checked + label span {
-  background: url("../images/radio_active.svg") no-repeat;
+  background: url("../images/default/radio_active.svg") no-repeat;
   background-size: 100% 100%;
 }
 
@@ -350,7 +350,6 @@ input[type="time"]::-webkit-inner-spin-button{display: none;}
 input[type="time"]::-webkit-calendar-picker-indicator{opacity: 0;} */
 /* progress */
 /* progress[value]::-webkit-progress-bar{background-color: whitesmoke; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25) inset;}
->>>>>>> Stashed changes
 #progress[value]{appearance: none; border-radius: 15px; overflow: hidden; position: relative; display: flex; align-items: center;}
 #progress[value]::-webkit-progress-value{background-image: linear-gradient(to left, #2ecc71, #3498db);}
 ::-webkit-meter-inner-element{}
