js 링크 제거, 페이지 권한 및 헤더 이동 url 수정

--- a/danusys-firefighting/src/main/resources/templates/view/pages/config/userGroup.html
+++ b/danusys-firefighting/src/main/resources/templates/view/pages/config/userGroup.html
@@ -105,7 +105,7 @@
                                 </thead>
                                 <tbody>
                                 <tr>
-                                    <td>대시보드</td>
+                                    <td>재난 현황판</td>
                                     <td>
                                         <span>
                                             <input type="radio" id="dashboardNot" name="dashboard" data-value="--">
@@ -126,7 +126,7 @@
                                     </td>
                                 </tr>
                                 <tr>
-                                    <td>관제</td>
+                                    <td>모니터링</td>
                                     <td>
                                         <span>
                                             <input type="radio" id="monitoringNot" name="mntr" data-value="--">
@@ -147,7 +147,7 @@
                                     </td>
                                 </tr>
                                 <tr>
-                                    <td>조회 및 관리</td>
+                                    <td>영상 로그 조회</td>
                                     <td>
                                         <span>
                                             <input type="radio" id="inquiryNot" name="inqry" data-value="--">
