--- a/danusys-firefighting/src/main/resources/static/css/board.css
+++ b/danusys-firefighting/src/main/resources/static/css/board.css
@@ -194,8 +194,6 @@ input, select, textarea:focus {
   font-size: 1.125rem;
   text-align: center;
   position: relative;
-}
-.header .gnm li a {
   flex: 1;
   display: flex;
   align-items: center;
@@ -204,41 +202,49 @@ input, select, textarea:focus {
   cursor: pointer;
   border-bottom: 0.25rem solid #000000;
 }
-.header .gnm li a:hover {
-  font-weight: 600;
-  color: #f09a9c;
-  border-bottom: 0.25rem solid #f09a9c;
-  transition: 0.2s;
-}
-.header .gnm li a:active {
-  font-weight: 600;
-  color: #e77376;
-  border-bottom: 0.25rem solid #e77376;
-  transition: 0.2s;
-}
 .header .gnm li .gnm_sub {
   z-index: 10;
   position: absolute;
+  top: 3.75rem;
   overflow: hidden;
   background: #1b1b1b;
   border-bottom-left-radius: 0.25rem;
   border-bottom-right-radius: 0.25rem;
   box-shadow: 0px 3px 5px rgb(0, 0, 0);
+  display: none;
 }
 .header .gnm li .gnm_sub li {
   margin: 0;
   padding: 0;
+  height: 3.75rem;
+  display: flex;
+  align-items: center;
+  font-weight: 300;
+  border: 0;
 }
 .header .gnm li .gnm_sub li a {
-  height: 3.75rem;
   margin: 0;
   font-size: 1rem;
   border: none;
 }
 .header .gnm li .gnm_sub li a:hover {
-  color: #e0e0e0;
+  color: #f09a9c;
+  font-weight: 600;
   border: none;
-  background: #595959;
+}
+.header .gnm > li:hover {
+  font-weight: 600;
+  border-bottom: 0.25rem solid #f09a9c;
+  transition: 0.2s;
+}
+.header .gnm > li.hover .gnm_sub {
+  display: block;
+}
+.header .gnm > li:active, .header .gnm > li.active {
+  font-weight: 600;
+  color: #e77376;
+  border-bottom: 0.25rem solid #e77376;
+  transition: 0.2s;
 }
 .header .util {
   display: flex;
