--- a/danusys-commons-ui/src/main/resources/static/css/map/map.css
+++ b/danusys-commons-ui/src/main/resources/static/css/map/map.css
@@ -25,6 +25,7 @@
     background: #1e1f239e;
     box-shadow: 0px 0px 20px rgba(204, 143, 143, 0.2);
     border-radius: 10px;
+    transform: translate(-50%, -40%);
 }
 
 #mouseOverPopup .my-ol-popup-closer{
