--- a/danusys-platform/src/main/resources/templates/fragments/mntr/navR.html
+++ b/danusys-platform/src/main/resources/templates/fragments/mntr/navR.html
@@ -278,14 +278,13 @@
                     </ul>
                 </div>
                 <!-- 메모 -->
-                <dl class="area_title" data-group="stationMemo">
+                <dl th:if="${municipality == '26290000'}" class="area_title" data-group="stationMemo">
                     <dt><i><img src="/images/default/titleIcon06.svg"></i>개소 메모</dt>
                 </dl>
-                <div class="area_right_text" data-group="stationMemo" style="display: flex; flex-direction: column; padding: 16px;">
+                <div th:if="${municipality == '26290000'}" class="area_right_text" data-group="stationMemo" style="display: flex; flex-direction: column; padding: 16px;">
                     <textarea data-value="remark"></textarea>
                     <input id="btnSaveMeno" value="메모 저장" type="button" />
                 </div>
-
                 <!-- /메모 -->
 
                 <dl class="area_title" data-group="stationState">
