--- a/danusys-platform/src/main/resources/templates/fragments/mntr/navR.html
+++ b/danusys-platform/src/main/resources/templates/fragments/mntr/navR.html
@@ -451,10 +451,16 @@
                 </dl>
                 <div class="area_right_text" data-group="fcltList">
                     <ul>
-                        <li>
+                        <!--<li>
+                            <span class="circle green"></span>
                             <span>FCLT1</span>
-                            <input data-value="address" type="text" disabled>
+                            <input data-value="address" value="시설물a" type="text" disabled>
                         </li>
+                        <li>
+                            <span class="circle red"></span>
+                            <span>FCLT2</span>
+                            <input data-value="address" value="시설물b" type="text" disabled>
+                        </li>-->
                     </ul>
                 </div>
             </div>
