--- a/danusys-firefighting/src/main/resources/static/css/monitoring.css
+++ b/danusys-firefighting/src/main/resources/static/css/monitoring.css
@@ -489,6 +489,7 @@ span.button:hover {
   padding: 0.25rem 0.75rem;
   border-radius: 1.5rem;
   background: #1b1b1b;
+  z-index: 1;
 }
 .marker_legend ul {
   display: flex;
@@ -560,6 +561,7 @@ span.button:hover {
   padding: 0 0.625rem;
   border-radius: 0.25rem;
   background: #1b1b1b;
+  z-index: 1;
 }
 .map_info ul {
   display: flex;
@@ -598,6 +600,7 @@ span.button:hover {
   font-size: 0.75rem;
   font-weight: 300;
   color: #e0e0e0;
+  z-index: 1;
 }
 .map_options .align_horizontal {
   display: flex;
@@ -661,6 +664,7 @@ span.button:hover {
   border-radius: 0.25rem;
   background: #1b1b1b;
   box-shadow: 0.0625rem 0.25rem 0.25rem rgba(0, 0, 0, 0.18);
+  display: none;
 }
 .map_options .popup_layer h6 {
   padding: 0.25rem 0 0.75rem 0;
