--- a/danusys-firefighting/src/main/resources/static/css/monitoring.css
+++ b/danusys-firefighting/src/main/resources/static/css/monitoring.css
@@ -766,10 +766,15 @@ span.button:hover {
 .panel {
   position: relative;
   display: flex;
+  right: -27.5rem;
   flex-direction: column;
   width: 27.5rem;
   height: 100%;
   background: #1b1b1b;
+}
+
+.panel.select {
+  right: 0;
 }
 
 .panel_toggle {
@@ -792,6 +797,14 @@ span.button:hover {
 .panel_contents {
   height: 100%;
   overflow: auto;
+}
+
+.area_right_scroll {
+  display: none;
+}
+
+.area_right_scroll.select {
+  display: block;
 }
 
 .sort_tab {
@@ -818,7 +831,7 @@ span.button:hover {
   border-bottom: 0.125rem solid #f09a9c;
   transition: 0.2s;
 }
-.sort_tab li:active {
+.sort_tab li:active, .sort_tab li.active {
   color: #e77376;
   font-weight: 600;
   border-bottom: 0.125rem solid #e77376;
