--- a/danusys-firefighting/src/main/resources/static/css/monitoring.scss
+++ b/danusys-firefighting/src/main/resources/static/css/monitoring.scss
@@ -363,13 +363,12 @@ span.button:hover{
 .panel{
     position: relative;
     display: flex;
-    right: -27.5rem;
     flex-direction: column;
-    width: 27.5rem; height: 100%;
+    width: 0rem; height: 100%;
     background: $bg_cate;
 }
 .panel.select{
-    right: 0;
+    width: 27.5rem;
 }
 .panel_toggle{
     z-index: 20;
@@ -386,6 +385,7 @@ span.button:hover{
 .panel_contents{
     height: 100%;
     overflow: auto;
+    right: -27.5rem;
 }
 .area_right_scroll{
     display: none;
