--- a/danusys-platform/src/main/resources/templates/view/pages/dashboard/dashboard_facility_bsng.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/dashboard/dashboard_facility_bsng.html
@@ -4,7 +4,7 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="layout/layout_dashboard">
 <head>
-    <script type="text/javascript" src="/js/pages/dashboard.js"></script>
+    <script type="text/javascript" src="/js/pages/dashboardBsng.js"></script>
 </head>
 <th:block layout:fragment="content">
     <section class="dashboard_top">
@@ -30,39 +30,23 @@
         </dl>-->
     </section>
     <section class="dashboard_section">
-        <div class="box box_320">
+        <div class="box">
             <h5>유동인구</h5>
             <div id="floatingPopulationChart"><!-- 그래프 영역 --></div>
         </div>
-        <div class="box box_320">
+        <div class="box">
             <h5>유동인구 분포도</h5>
             <!-- 위치맵 영역 -->
             <div id="dashFacilityHeatMap" class="map_wrap">
                 <canvas class="map_mouse_ban"></canvas>
             </div>
         </div>
-        <div class="box box_location box_320" th:attr="data-municipality=${@environment.getProperty('municipality.name')}">
+        <div class="box box_location" th:attr="data-municipality=${@environment.getProperty('municipality.name')}">
             <h5>개소 위치</h5>
             <!-- 분포도 영역 -->
             <div id="dashFacilityStationMap" class="map_wrap">
                 <canvas class="map_mouse_ban"></canvas>
             </div>
-        </div>
-    </section>
-    <section class="dashboard_section">
-        <div class="box box_status box_320">
-            <h5>장소별 설치 현황
-                <!--<dl class="label">
-                    <dt>당일 누적</dt>
-                    <dd>
-                        <p><span class="status lv1"></span>긴급</p>
-                        <p><span class="status lv2"></span>주의</p>
-                    </dd>
-                </dl>-->
-            </h5>
-            <div id="stationChart"><!-- 그래프 영역 --></div>
-        </div>
-        <div class="box box_weather box_320">
             <h5>실내 대기 상태
                 <ul class="stepper">
                     <li class="remove">
@@ -120,6 +104,79 @@
                 </div>
             </div>
         </div>
+
     </section>
+   <!-- <section class="dashboard_section">
+        <div class="box box_status box_320">
+            <h5>장소별 설치 현황
+                &lt;!&ndash;<dl class="label">
+                    <dt>당일 누적</dt>
+                    <dd>
+                        <p><span class="status lv1"></span>긴급</p>
+                        <p><span class="status lv2"></span>주의</p>
+                    </dd>
+                </dl>&ndash;&gt;
+            </h5>
+            <div id="stationChart">&lt;!&ndash; 그래프 영역 &ndash;&gt;</div>
+        </div>
+        <div class="box box_weather box_320">
+            <h5>실내 대기 상태
+                <ul class="stepper">
+                    <li class="remove">
+                        <span class="bar"><em>0</em></span>
+                    </li>
+                    <li>
+                        <span class="bar"><em>20</em></span>
+                        <span class="text">매우나쁨(위험)</span>
+                    </li>
+                    <li>
+                        <span class="bar"><em>40</em></span>
+                        <span class="text">매우나쁨</span>
+                    </li>
+                    <li>
+                        <span class="bar"><em>60</em></span>
+                        <span class="text">나쁨</span>
+                    </li>
+                    <li>
+                        <span class="bar"><em>80</em></span>
+                        <span class="text">보통</span>
+                    </li>
+                    <li>
+                        <span class="bar"><em>100</em></span>
+                        <span class="text">좋음</span>
+                    </li>
+                </ul>
+            </h5>
+            <div class="area_weather">
+                <div class="weather_left">
+                    <h6 id="sensorName"></h6>
+                    <dl>
+                        <dt><img src="/images/dashboard/icon_temperature.svg"></dt>
+                        <dd>온도
+                            <span class="bar"></span>
+                            <span id="temperature"></span>°
+                        </dd>
+                    </dl>
+                    <dl>
+                        <dt><img src="/images/dashboard/icon_humidity.svg"></dt>
+                        <dd>습도
+                            <span class="bar"></span>
+                            <span id="humidity"></span>%
+                        </dd>
+                    </dl>
+                </div>
+                <div class="weather_right">
+                    <dl>
+                        <dt>미세먼지</dt>
+                        <dd class="area_graph" id="pm10Value24">&lt;!&ndash; 그래프 영역 &ndash;&gt;</dd>
+                    </dl>
+                    <dl>
+                        <dt>초미세먼지</dt>
+                        <dd class="area_graph" id="pm25Value24">&lt;!&ndash; 그래프 영역 &ndash;&gt;</dd>
+                    </dl>
+                </div>
+            </div>
+        </div>
+    </section>-->
 </th:block>
 </html>
