--- a/danusys-platform/src/main/resources/templates/view/pages/statistics.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/statistics.html
@@ -14,7 +14,7 @@
     </h4>
     <section class="statistics_content">
         <article class="search_form" id="searchForm">
-            <h6><span class="event_type"></span> 발생 통계 검색</h6>
+            <h6><span class="event_type"></span> 통계 검색</h6>
             <form>
                 <div>
                     <p>이벤트 종류</p>
@@ -69,13 +69,7 @@
             <div class="search_table">
                 <table id="troubleEventTable">
                     <thead>
-                        <tr>
-                            <th>이벤트 등급</th>
-                            <th>이벤트 종류</th>
-                            <th>시설물 종류</th>
-                            <th>행정구역</th>
-                            <th>이벤트 발생일시</th>
-                        </tr>
+                        <tr></tr>
                     </thead>
                 </table>
             </div>
@@ -83,7 +77,7 @@
         <article class="search_list">
             <div class="graph_contents">
                 <dl class="graph_title">
-                    <dt>이벤트 발생 수</dt>
+                    <dt><span class="event_type"></span> 수</dt>
                     <dd id="sumBtn" class="chartBtn">
                         <span class="hour">시</span>
                         <span class="day on">일</span>
@@ -95,7 +89,7 @@
             </div>
             <div class="graph_contents">
                 <dl class="graph_title">
-                    <dt>평균 이벤트 발생 수</dt>
+                    <dt>평균 <span class="event_type"></span> 수</dt>
                     <dd id="avgBtn" class="chartBtn">
                         <span class="hour">시간대</span>
                         <span class="day on">요일</span>
@@ -109,7 +103,7 @@
         <article class="search_list">
             <div class="graph_contents">
                 <dl class="graph_title">
-                    <dt>행정구역 별 이벤트 발생 수</dt>
+                    <dt>행정구역 별 <span class="event_type"></span> 수</dt>
                 </dl>
                 <div class="graph_area" id="mapChart"></div>
             </div>
