--- a/danusys-platform/src/main/resources/templates/fragments/mntr/navR.html
+++ b/danusys-platform/src/main/resources/templates/fragments/mntr/navR.html
@@ -229,11 +229,11 @@
                         <option>고정형</option>-->
                     </select>
                 </dt>
-                <dd class="ptz_toggle">
+                <!--<dd class="ptz_toggle">
                     <span>PTZ</span>
-                    <!-- TODO ID-->
+                    &lt;!&ndash; TODO ID&ndash;&gt;
                     <input type="checkbox" id="switch1"><label for="switch">Toggle</label>
-                </dd>
+                </dd>-->
             </dl>
             <div>
                 <div class="area_video">
@@ -899,10 +899,10 @@
                         <option>고정형</option>
                     </select>
                 </dt>
-                <dd class="ptz_toggle">
+                <!--<dd class="ptz_toggle">
                     <span>PTZ</span>
                     <input type="checkbox" id="switch"><label for="switch">Toggle</label>
-                </dd>
+                </dd>-->
             </dl>
             <div>
                 <div class="area_video">
